[JBIDE-7772] * added command, handler, plugin.xml-declaration and icosn for managing keys in the context-menu of the cloud viewer * extracted common wizard code & moved it to AbstractDeltaCloudWizard * extracted common handler code & moved it to WizardUtils
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28601 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
@@ -43,7 +43,7 @@ command.newconnection.description = Creates a new cloud connection
 command.newconnection.name = New Connection
 command.editconnection.description = Edits a Connection
 command.editconnection.name = Edit Connection
-command.createinstance.description.0 = Launches an instance
+command.createinstance.description = Launches an instance
 command.createinstance.name = Launch Instance
 command.startinstance.description = Starts a cloud instance
 command.startinstance.name = Start
@@ -53,6 +53,10 @@ command.rebootinstance.description = Reboots a cloud instance
 command.rebootinstance.name = Reboot
 command.destroyinstance.name = Destroy
 command.destroyinstance.description = Destroys a cloud instance
+command.managekeys.description = Manages the keys of a cloud
+command.managekeys.name = Manage Keys
+command.managekeys.label = Manage Keys
+command.managekeys.tooltip = Manage Keys
 command.filterimages.description = Filters images
 command.filterimages.name = Filter Images...
 command.filterinstances.description = Filters instances
