--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -875,9 +875,43 @@
               </instanceof>
            </or></possibleChildren>
      </navigatorContent>
+     <navigatorContent
+           activeByDefault="true"
+           contentProvider="org.jboss.tools.deltacloud.ui.views.cloud.cnf.FiltersContentProvider"
+           icon="icons/sample.gif"
+           id="org.jboss.tools.deltacloud.ui.filtersContentRoot"
+           labelProvider="org.jboss.tools.deltacloud.ui.views.cloud.cnf.CloudLabelProvider"
+           name="Filters"
+           priority="high">
+        <triggerPoints>
+           <or>
+              <instanceof
+                    value="java.lang.Object">
+              </instanceof>
+           </or>
+        </triggerPoints>
+        <possibleChildren>
+           <or>
+              <instanceof
+                    value="java.lang.Object">
+              </instanceof>
+           </or></possibleChildren>
+     </navigatorContent>
      <actionProvider
            class="org.jboss.tools.deltacloud.ui.views.cloud.cnf.CloudViewActionProvider"
            id="org.jboss.tools.deltacloud.ui.views.cloud.cnf.CloudViewActionProvider"
+           priority="higher">
+        <enablement>
+           <or>
+              <instanceof
+                    value="java.lang.Object">
+              </instanceof>
+           </or>
+        </enablement>
+     </actionProvider>
+     <actionProvider
+           class="org.jboss.tools.deltacloud.ui.views.cloud.cnf.FiltersActionProvider"
+           id="org.jboss.tools.deltacloud.ui.views.cloud.cnf.FiltersActionProvider"
            priority="higher">
         <enablement>
            <or>
@@ -900,6 +934,10 @@
                  isRoot="true"
                  pattern="org.jboss.tools.deltacloud.ui.cloudContentRoot">
            </contentExtension>
+           <contentExtension
+                 isRoot="false"
+                 pattern="org.jboss.tools.deltacloud.ui.filtersContentRoot">
+           </contentExtension>
         </includes>
      </viewerContentBinding>
      <viewerActionBinding
@@ -907,6 +945,9 @@
         <includes>
            <actionExtension
                  pattern="org.jboss.tools.deltacloud.ui.views.cloud.cnf.CloudViewActionProvider">
+           </actionExtension>
+           <actionExtension
+                 pattern="org.jboss.tools.deltacloud.ui.views.cloud.cnf.FiltersActionProvider">
            </actionExtension>
         </includes>
      </viewerActionBinding>
