JBIDE-8311 fix legal info, add missing files
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@28946 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/runtime/plugins/org.jboss.tools.runtime.ui/build.properties
+++ b/runtime/plugins/org.jboss.tools.runtime.ui/build.properties
@@ -2,6 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
                plugin.properties,\
-               icons/
+               plugin.xml,\
+               icons/,\
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               jboss_about.png
