--- a/runtime/plugins/org.jboss.tools.runtime.ui/plugin.properties
+++ b/runtime/plugins/org.jboss.tools.runtime.ui/plugin.properties
@@ -1,4 +1,4 @@
-#Properties file for org.jboss.tools.runtime
+#Properties 
 BundleVendor = JBoss by Red Hat
-BundleName = JBoss Runtime UI
+BundleName = JBoss Runtime Detection UI
 JBoss_Runtimes = JBoss Tools Runtime Detection
