[JBIDE-8187] added capability to filter for instance alias
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28960 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -25,6 +25,7 @@ CloudConnectionAuthError.message=Could not authorize to the cloud on url {0}
 
 Url.label=URL:
 Name.label=Name:
+Alias.label=Alias:
 Type.label=Type:
 UserName.label=Username:
 Password.label=Password:
