--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -75,10 +75,15 @@ ConfirmCloudDelete.title=Confirm Cloud Disconnect
 ConfirmCloudDelete.msg=Please choose the clouds that shall be disconnected by checking them:
 CreateInstance.label=Launch Instance
 
-NAME=Name
-ALIAS=Alias
-ID=ID
-HOSTNAME=Public Hostname
-STATUS=State
-ARCH=Architecture
-DESC=Description
+DeltaCloudElementColumn.name.label=Name
+DeltaCloudElementColumn.alias.label=Alias
+DeltaCloudElementColumn.id.label=Id
+DeltaCloudElementColumn.imageId.label=Image Id
+DeltaCloudElementColumn.ownerId.label=Owner Id
+DeltaCloudElementColumn.keyId.label=Key Id
+DeltaCloudElementColumn.realm.label=Realm
+DeltaCloudElementColumn.profile.label=Profile
+DeltaCloudElementColumn.state.label=State
+DeltaCloudElementColumn.hostname.label=Public Hostname
+DeltaCloudElementColumn.architecture.label=Architecture
+DeltaCloudElementColumn.description.label=Description
