[JBIDE-8319] added columns imageId, ownerId, key, realm and profile to instance view. Made that labels in filter dialog match the column names.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28973 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -32,9 +32,9 @@ Password.label=Password:
 TestButton.label=Test
 UnknownType.label=Unknown
 IllegalCloudUrl.msg=Invalid url or non-deltacloud url.
-Id.label=ID:
-ImageId.label=Image ID:
-OwnerId.label=Owner ID:
+Id.label=Id:
+ImageId.label=Image Id:
+OwnerId.label=Owner Id:
 Image.label=Image:
 Arch.label=Architecture:
 Desc.label=Description:
