https://issues.jboss.org/browse/JBIDE-8114
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29021 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.ui/plugin.xml
+++ b/bpel/plugins/org.eclipse.bpel.ui/plugin.xml
@@ -708,7 +708,7 @@
             class="org.eclipse.bpel.ui.perspectives.BPELPerspectiveFactory"
             icon="icons/obj20/bpel.png"
             id="org.eclipse.bpel.ui.perspective"
-            name="BPEL Perspective">
+            name="BPEL">
       </perspective>
    </extension>
 </plugin>
