unbuffered input (to be continued)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29050 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/forge/plugins/org.jboss.tools.seam.forge/build.properties
+++ b/forge/plugins/org.jboss.tools.seam.forge/build.properties
@@ -1,7 +1,8 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
-               bin/,\
                lib/,\
-               icons/
+               icons/,\
+               .,\
+               lib/jline.jar
+source.. = src/
