--- a/runtime/plugins/org.jboss.tools.runtime/plugin.properties
+++ b/runtime/plugins/org.jboss.tools.runtime/plugin.properties
@@ -1,3 +1,5 @@
 #Properties file for org.jboss.tools.runtime
 BundleVendor = JBoss by Red Hat
 BundleName = JBoss Runtime Initializer
+JBoss_Runtimes = JBoss Runtimes
+ImportExportJBossRuntimes = JBoss Runtimes preferences
