new icons and business task
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29087 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.properties
+++ b/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.properties
@@ -76,3 +76,6 @@ prefpage.org.jboss.tools.bpmn2.process.diagram.appearance=Appearance
 prefpage.org.jboss.tools.bpmn2.process.diagram.connections=Connections
 prefpage.org.jboss.tools.bpmn2.process.diagram.printing=Printing
 prefpage.org.jboss.tools.bpmn2.process.diagram.rulersAndGrid=Rulers And Grid
+metatype.name.BusinessRuleTask_2018=BusinessRuleTask
+metatype.name.BusinessRuleTask_3017=BusinessRuleTask
+metatype.name.IntermediateCatchEvent_3018=IntermediateCatchEvent
