--- a/common/plugins/org.jboss.tools.common.model.ui/plugin.xml
+++ b/common/plugins/org.jboss.tools.common.model.ui/plugin.xml
@@ -286,6 +286,8 @@
       </include>         
       <include file="templates/web-facesconfig_1_2.xml" translations="templates/web-facesconfig_1_2.properties">
       </include>         
+      <include file="templates/web-facesconfig_2_0.xml" translations="templates/web-facesconfig_2_0.properties">
+      </include>         
 
    </extension>
 
