--- a/requirements/soap/build.properties
+++ b/requirements/soap/build.properties
@@ -10,10 +10,10 @@ soap50.build.archive=${soap50.build.name}.zip
 soap50.build.archive.md5=b9088f7884c7464419623c596dafe25f
 soap50.build.archive.root=jboss-soa-p.5.0.0
 
-# JBDS-1374, JBIDE-8055 add SOA-P 5.1 - http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1-ER9/unsigned/soa-5.1.0.ER9.zip
-soap51.build.uri=http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1-ER9/unsigned/
-soap51.build.name=soa-5.1.0.ER9
+# JBDS-1374, JBIDE-8055, JBIDE-8403 update SOA-P 5.1 - http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1.CR1/unsigned/soa-5.1.0.GA.zip
+soap51.build.uri=http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1.CR1/unsigned/
+soap51.build.name=soa-5.1.0.GA
 soap51.build.archive=${soap51.build.name}.zip
-soap51.build.archive.md5=9a690c7932a472d3c558706e049f27a6
+soap51.build.archive.md5=f3cb81c4c7493a6255620d15233a5671
 soap51.build.archive.root=jboss-soa-p.5.1.0
 
