Description added for New Smooks Configuration File Wizard and other srings are externalized as well
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29121 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/smooks/plugins/org.jboss.tools.smooks.ui/plugin.properties
+++ b/smooks/plugins/org.jboss.tools.smooks.ui/plugin.properties
@@ -95,3 +95,20 @@ _UI_XslEditor_label = Xsl Model Editor
 _UI_XslEditorFilenameDefaultBase = My
 _UI_XslEditorFilenameExtensions = xsl
 launch.shortcut.text=Smooks Run Configuration
+
+editor.name = Smooks Configuration Editor
+category.name = Smooks
+wizard.name = Smooks Configuration File
+wizard.description = Create a new Smooks Configuration File
+content-type.name = Smooks Configuration File
+decorator.label = Smooks Configuration Page Viewer Decorator
+decorator.description = Decorate smooks configuration page viewer
+extension.name = Smooks Problem
+extension.name.0 = Smooks File Validator
+propertyTab.label = Properties
+propertyTab.label.0 = Validation
+propertyTab.label.1 = Rule Bases
+propertyTab.label.2 = Decode
+propertyTab.label.3 = CSV Record Properties
+propertyTab.label.4 = Mapping Path
+launchConfigurationType.name = Smooks Configuration
