--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -70,7 +70,7 @@ DestroyInstancesDialog.title=Destroy Instances
 DestroyInstancesDialog.msg=Please choose the clouds that shall be destroyed by checking them:
 DestroyInstancesDialogError.title=Error while destroying instance(s)
 DestroyInstancesDialogError.msg=Could not destroy instance(s) {0}
-ConnectingRSE.msg=Connecting instance as: {0}
+ConnectingRSE.msg=Connecting instance as {0}
 ConfirmCloudDelete.title=Confirm Cloud Disconnect
 ConfirmCloudDelete.msg=Please choose the clouds that shall be disconnected by checking them:
 CreateInstance.label=Launch Instance
