--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -121,6 +121,6 @@ CreateKey.msg=Specify a unique id for a new key:
 ConfirmKeyDelete.title=Confirm Key Delete
 ConfirmKeyDelete.msg=Confirm deletion of key: {0}
 
-StartingInstance.title=Starting Instance
-StartingInstance.msg=Starting Instance: {0}
-ConnectingRSE.msg=Connecting instance as: {0}
+StartingInstance.title=Starting Instance {0}
+StartingInstance.msg=Starting Instance {0}
+
