--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -53,7 +53,7 @@ StartInstancesDialog.msg=Please choose the instances that shall be started by ch
 StartInstancesDialogError.title=Error while starting instance(s)
 StartInstancesDialogError.msg=Could not start instance(s) {0}
 StoppingInstance.title=Stopping Instance
-StoppingInstance.msg=Stopping Instance: {0}
+StoppingInstance.msg=Stopping Instance {0}
 StopInstancesDialog.title=Stop Instances
 StopInstancesDialog.msg=Please choose the instances that shall be stopped by checking them:
 StopInstancesDialogError.title=Error while stopping instance(s)
