JBIDE-8433 https://issues.jboss.org/browse/JBIDE-8443
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29239 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/common/plugins/org.jboss.tools.common.model/plugin.xml
+++ b/common/plugins/org.jboss.tools.common.model/plugin.xml
@@ -339,6 +339,8 @@
 			class="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintInt"/>
 		<xclass id="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintJavaName"
 			class="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintJavaName"/>
+		<xclass id="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintNmtoken"
+			class="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintNmtoken"/>
 		<xclass id="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintJavaNameOrEmpty"
 			class="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintJavaNameOrEmpty"/>
 		<xclass id="org.jboss.tools.common.meta.constraint.impl.XAttributeConstraintList"
