update SOA-P 5.1 dep to use GA URL
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29268 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/requirements/soap/build.properties
+++ b/requirements/soap/build.properties
@@ -10,8 +10,9 @@ soap50.build.archive=${soap50.build.name}.zip
 soap50.build.archive.md5=b9088f7884c7464419623c596dafe25f
 soap50.build.archive.root=jboss-soa-p.5.0.0
 
-# JBDS-1374, JBIDE-8055, JBIDE-8403 update SOA-P 5.1 - http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1.CR1/unsigned/soa-5.1.0.GA.zip
-soap51.build.uri=http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1.CR1/unsigned/
+# JBDS-1374, JBIDE-8055, JBIDE-8403 update SOA-P 5.1 - http://jawa05.englab.brq.redhat.com/released/SOA-5.1.GA/unsigned/soa-5.1.0.GA.zip
+# DO NOT USE stuff in http://porkchop.devel.redhat.com/released/JBossSOAP/5.1/5.1.0/ (not sure why different, but different; also no modeshape/teiid jars)
+soap51.build.uri=http://jawa05.englab.brq.redhat.com/released/SOA-5.1.GA/unsigned/
 soap51.build.name=soa-5.1.0.GA
 soap51.build.archive=${soap51.build.name}.zip
 soap51.build.archive.md5=f3cb81c4c7493a6255620d15233a5671
