https://issues.jboss.org/browse/JBIDE-7003, preferences has been added to validator
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29310 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.web.ui/src/org/jboss/tools/jst/web/ui/internal/preferences/ELSeverityPreferencesMessages.properties
+++ b/jst/plugins/org.jboss.tools.jst.web.ui/src/org/jboss/tools/jst/web/ui/internal/preferences/ELSeverityPreferencesMessages.properties
@@ -20,6 +20,7 @@ JSFValidatorConfigurationBlock_pb_checkVars_label=Recognize "var" attributes
 JSFValidatorConfigurationBlock_pb_revalidateUnresolvedEl_label=Revalidate unresolved ELs automatically.
 JSFValidatorConfigurationBlock_pb_unknownElVariablePropertyName_label=Property cannot be resolved:
 JSFValidatorConfigurationBlock_pb_unpairedGetterOrSetter_label=Unpaired Getter/Setter:
+JSFValidatorConfigurationBlock_pb_non_externalizedStrings_label=Non-externalized strings:
 
 JSF_VALIDATOR_CONFIGURATION_BLOCK_JSF_VALIDATOR_CONFIGURATION_BLOCK=JSFValidatorConfigurationBlock
 JSF_VALIDATOR_PREFERENCE_PAGE_JSF_VALIDATOR=Expression Language Validator
