--- a/download.jboss.org/jbosstools/updates/requirements/gwt/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/gwt/build.xml
@@ -17,11 +17,11 @@
 	-->
 	<target name="mirror">
 		<property name="URL" value="http://dl.google.com/eclipse/plugin/3.6" />
-		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/gwt/repo" />
+		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/gwt/" />
 		<property name="compress" value="true" />
 
 		<p2.mirror>
-			<repository location="file:${destination}" name="Google plugins for Eclipse 3.6" />
+			<repository location="file:${destination}/201102111811-complete" name="Google plugins for Eclipse 3.6" />
 			<source>
 				<repository location="${URL}" />
 			</source>
@@ -35,6 +35,9 @@
 			<slicingOptions includeFeatures="true" followStrict="true" />
 		</p2.mirror>
 
-		<p2.publish.featuresAndBundles metadataRepository="file:${destination}" artifactRepository="file:${destination}" publishartifacts="true" source="${destination}" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/201010280102" artifactRepository="file:${destination}/201010280102" publishartifacts="true" source="${destination}/201010280102" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/201012211742" artifactRepository="file:${destination}/201012211742" publishartifacts="true" source="${destination}/201012211742" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/201102111811" artifactRepository="file:${destination}/201102111811" publishartifacts="true" source="${destination}/201102111811" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/201102111811-complete" artifactRepository="file:${destination}/201102111811-complete" publishartifacts="true" source="${destination}/201102111811-complete" compress="${compress}" />
 	</target>
 </project>
