--- a/modeshape/features/org.jboss.tools.modeshape.rest.feature/feature.properties
+++ b/modeshape/features/org.jboss.tools.modeshape.rest.feature/feature.properties
@@ -15,12 +15,12 @@ featureProvider = JBoss by Red Hat
 
 description = Provides a resource publishing and unpublishing capability to ModeShape repositories.
 
-copyright = ModeShape is copyright 2010 Red Hat, Inc.\n\
+copyright = ModeShape Tools is copyright 2011 Red Hat, Inc.\n\
 Some portions may be licensed to Red Hat, Inc. under one or more\n\
 contributor license agreements.  See the AUTHORS.txt file in the\n\
 distribution for a full listing of individual contributors.\n\
 \n\
-ModeShape is free software, and is made available by Red Hat, Inc.\n\
+ModeShape Tools is free software, and is made available by Red Hat, Inc.\n\
 under the terms of the Eclipse Public License v1.0 which accompanies\n\
 this distribution and is available at\n\
 http://www.eclipse.org/legal/epl-v10.html.
