--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/about.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/about.properties
@@ -10,12 +10,12 @@
 # individual contributors.
 #
 
-featureText=ModeShape REST Tools for Eclipse\n\
+featureText=ModeShape JCR REST Tools for Eclipse\n\
 \n\
 Version: {featureVersion}\n\
 \n\
-Copyright (c) 2008-2010 Red Hat, Inc. All rights reserved.\n\
+Copyright (c) 2008-2011 Red Hat, Inc. All rights reserved.\n\
 Visit http://www.jboss.org/tools and http://www.modeshape.org/
 
-featureName=ModeShape REST Tools for Eclipse
+featureName=ModeShape JCR REST Tools for Eclipse
 
