initial work for runtime preferences page
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29346 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/forge/plugins/org.jboss.tools.seam.forge/plugin.xml
+++ b/forge/plugins/org.jboss.tools.seam.forge/plugin.xml
@@ -44,5 +44,18 @@
          </action>
       </viewContribution>
    </extension>
+	<extension point="org.eclipse.ui.preferencePages">
+		<page
+			name="Forge"
+			class="org.jboss.tools.seam.forge.preferences.EmptyPreferencePage"
+			id="org.jboss.tools.seam.forge">
+		</page>
+		<page
+			name="Installed Forge Runtimes"
+			category="org.jboss.tools.seam.forge"
+			class="org.jboss.tools.seam.forge.preferences.EmptyPreferencePage"
+			id="org.jboss.tools.seam.forge.runtimes">
+        </page>
+	</extension>
 
 </plugin>
