--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
@@ -14,8 +14,8 @@ Bundle-Name.0 = Jsp Editor Plug-in
 javaStringELHover= EL in Java String
 javaStringELHoverDescription= Shows the Javadoc of the selected EL-operand.
 
-proposalCategory.xmlEL= JBoss JSF/SEAM EL Proposals
-proposalCategory.xmlTag= JBoss JSF/SEAM Tag Proposals
+proposalCategory.xmlEL= JBoss JSF EL Proposals
+proposalCategory.xmlTag= JBoss JSF Tag Proposals
 Toggle.Selection.Bar=Toggle Selection Bar
 Externalize.Selected.Property=Externalize Strings...
 
