JBIDE-8049 *.inc content type JSP clash with PDT
Issue is fixed.

git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29365 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -194,7 +194,7 @@
             contributorClass="org.jboss.tools.jst.jsp.jspeditor.JSPMultiPageContributor"
             id="org.jboss.tools.jst.jsp.jspeditor.JSPTextEditor"
             matchingStrategy = "org.jboss.tools.common.core.resources.MatchingStrategyImpl"
-            extensions="jsp, jspf, jspx, tag, tagf, inc">
+            extensions="jsp, jspf, jspx, tag, tagf">
          <contentTypeBinding contentTypeId="org.eclipse.jst.jsp.core.jspsource"/>
       </editor>
       <editor 
@@ -538,9 +538,9 @@
 	</extension>
 	
     <extension point="org.eclipse.core.runtime.contentTypes">
-       <file-association
+       <!--file-association
              content-type="org.eclipse.jst.jsp.core.jspsource"
-             file-extensions="inc"/>
+             file-extensions="inc"/ -->
        <file-association
              content-type="org.eclipse.wst.html.core.htmlsource"
              file-extensions="jsf"/>
@@ -971,6 +971,17 @@
       </content-type> 
       
     </extension>
+   
+   <extension point="org.eclipse.core.contenttype.contentTypes"> 
+      <content-type id="org.eclipse.jst.jsp.core.jspsource" 
+       name="%ContentType_JBossToolsINC"
+       base-type="org.eclipse.core.runtime.text"
+       describer="org.jboss.tools.jst.jsp.jspeditor.JSPIncludeContentDescriber"
+       file-extensions="inc"
+       priority="normal" 
+       />
+   </extension>
+   
    
    <extension
          point="org.jboss.tools.common.model.resourceMapping">
