--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
@@ -20,3 +20,5 @@ Toggle.Selection.Bar=Toggle Selection Bar
 Externalize.Selected.Property=Externalize Strings...
 
 vpe.toolbar.name=VPE Toolbar
+
+ContentType_JBossToolsINC=JBoss Tools JSP Include
