JBIDE-8049 *.inc content type JSP clash with PDT
Issue is fixed. Fixed for 3.2.1

git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29367 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.properties
@@ -21,3 +21,4 @@ Externalize.Selected.Property=Externalize Strings...
 
 vpe.toolbar.name=VPE Toolbar
 
+ContentType_JBossToolsINC=JBoss Tools JSP Include
