JBIDE-8465: make the bpel perspective opened when finishing creating bpel project
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29401 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.jboss.tools.bpel.runtimes/plugin.xml
+++ b/bpel/plugins/org.jboss.tools.bpel.runtimes/plugin.xml
@@ -26,6 +26,8 @@
             category="org.eclipse.bpel.wizards"
             project="true"
             class="org.jboss.tools.bpel.runtimes.ui.wizards.NewBPELProjectWizard"
+            finalPerspective="org.eclipse.bpel.ui.perspective"
+            preferredPerspectives="org.eclipse.bpel.ui.perspective"
             id="org.jboss.tools.bpel.runtimes.wizards.newBPELProject">
             <description>%NEW_BPEL_PROJECT_DESCRIPTION</description>
       </wizard>
