more runtime preferences stuff
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29415 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/forge/plugins/org.jboss.tools.seam.forge/plugin.xml
+++ b/forge/plugins/org.jboss.tools.seam.forge/plugin.xml
@@ -53,7 +53,7 @@
 		<page
 			name="Installed Forge Runtimes"
 			category="org.jboss.tools.seam.forge"
-			class="org.jboss.tools.seam.forge.preferences.EmptyPreferencePage"
+			class="org.jboss.tools.seam.forge.preferences.ForgeRuntimesPreferencePage"
 			id="org.jboss.tools.seam.forge.runtimes">
         </page>
 	</extension>
