JBIDE-7589 last commit?
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29433 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/pom.xml
+++ b/deltacloud/plugins/pom.xml
@@ -7,8 +7,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<name>org.jboss.tools.deltacloud.plugins</name>
 	<packaging>pom</packaging>
 	<modules>
+                <module>org.jboss.tools.deltacloud.client</module>
+               	<module>org.jboss.tools.deltacloud.core</module>
 		<module>org.jboss.tools.deltacloud.ui</module>
-		<module>org.jboss.tools.deltacloud.core</module>
 		<module>org.jboss.tools.deltacloud.integration</module>
 		<module>org.jboss.tools.deltacloud.docs</module>
 	</modules>
