--- a/deltacloud/plugins/org.jboss.tools.deltacloud.client/build.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.client/build.properties
@@ -1,4 +1,5 @@
-source.. = src/,output.. \= bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/apache-mime4j-0.6.jar,\
@@ -11,9 +12,13 @@ bin.includes = META-INF/,\
                lib/log4j-1.2.14.jar,\
                about.html,\
                pom.xml,\
-               src/,\
-               .settings/,\
-               .project
-src.includes = bin/,\
-               lib/,\
+src.includes = lib/,\
                pom.xml
+jars.extra.classpath = lib/apache-mime4j-0.6.jar,\
+                       lib/commons-codec-1.3.jar,\
+                       lib/commons-logging-1.1.1.jar,\
+                       lib/httpclient-4.0.1.jar,\
+                       lib/httpcore-4.0.1.jar,\
+                       lib/httpcore-nio-4.0.1.jar,\
+                       lib/httpmime-4.0.1.jar,\
+                       lib/log4j-1.2.14.jar
