--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -59,6 +59,48 @@
       		type="preferencepages"
             value="org.eclipse.wst.sse.ui.preferences.jsp.occurrences"
 			target="org.eclipse.jst.jsp.core.jspsource"/>
+
+		<sourceViewerConfiguration
+			class="org.jboss.tools.jst.jsp.JSPTextViewerConfiguration"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<contentOutlineConfiguration
+			class="org.eclipse.jst.jsp.ui.views.contentoutline.JSPContentOutlineConfiguration"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<propertySheetConfiguration
+			class="org.eclipse.wst.xml.ui.views.properties.XMLPropertySheetConfiguration"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalConfiguration 
+      		type="sourceeditingtexttools"
+			class="org.eclipse.jst.jsp.ui.internal.editor.JSPSourceEditingTextTools"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalConfiguration
+      		type="characterpairmatcher"
+			class="org.eclipse.jst.jsp.ui.internal.text.JSPDocumentRegionEdgeMatcher"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+	    <provisionalConfiguration
+      		type="structuredtextfoldingprovider"
+            class="org.eclipse.wst.xml.ui.internal.projection.StructuredTextFoldingProviderJSP"
+            target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalDefinition 
+      		type="preferencepages"
+            value="org.eclipse.wst.sse.ui.preferences.jsp"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalDefinition
+      		type="preferencepages"
+            value="org.eclipse.wst.sse.ui.preferences.jsp.source"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalDefinition
+      		type="preferencepages"
+            value="org.eclipse.wst.sse.ui.preferences.jsp.templates"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+		<provisionalDefinition
+      		type="preferencepages"
+            value="org.eclipse.wst.sse.ui.preferences.jsp.styles"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
+      <provisionalDefinition
+      		type="preferencepages"
+            value="org.eclipse.wst.sse.ui.preferences.jsp.occurrences"
+			target="org.jboss.tools.jst.jsp.jspincludesource"/>
 			
 	      <sourceViewerConfiguration
 				class="org.jboss.tools.jst.jsp.HTMLTextViewerConfiguration"
@@ -196,6 +238,7 @@
             matchingStrategy = "org.jboss.tools.common.core.resources.MatchingStrategyImpl"
             extensions="jsp, jspf, jspx, tag, tagf">
          <contentTypeBinding contentTypeId="org.eclipse.jst.jsp.core.jspsource"/>
+         <contentTypeBinding contentTypeId="org.jboss.tools.jst.jsp.jspincludesource"/>
       </editor>
       <editor 
             class="org.jboss.tools.jst.jsp.jspeditor.JSPMultiPageEditor" 
@@ -536,11 +579,20 @@
 	  		editorId="org.jboss.tools.jst.jsp" 
 	  		name="%defaultOccurrenceStructureProviderName" /> 
 	</extension>
+
+	<extension point="org.eclipse.core.contenttype.contentTypes"> 
+   	</extension>
+   
 	
     <extension point="org.eclipse.core.runtime.contentTypes">
-       <!--file-association
-             content-type="org.eclipse.jst.jsp.core.jspsource"
-             file-extensions="inc"/ -->
+      	<content-type 
+	      	id="org.jboss.tools.jst.jsp.jspincludesource"
+	       	name="%ContentType_JBossToolsINC"
+	       	base-type="org.eclipse.jst.jsp.core.jspsource"
+	       	describer="org.jboss.tools.jst.jsp.jspeditor.JSPIncludeContentDescriber"
+	       	file-extensions="inc"
+	       	priority="high"/>
+	       	
        <file-association
              content-type="org.eclipse.wst.html.core.htmlsource"
              file-extensions="jsf"/>
@@ -972,17 +1024,6 @@
       
     </extension>
    
-   <extension point="org.eclipse.core.contenttype.contentTypes"> 
-      <content-type id="org.eclipse.jst.jsp.core.jspsource" 
-       name="%ContentType_JBossToolsINC"
-       base-type="org.eclipse.core.runtime.text"
-       describer="org.jboss.tools.jst.jsp.jspeditor.JSPIncludeContentDescriber"
-       file-extensions="inc"
-       priority="normal" 
-       />
-   </extension>
-   
-   
    <extension
          point="org.jboss.tools.common.model.resourceMapping">
       <mapping
@@ -1304,6 +1345,16 @@
           		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
           		<partitionType id="org.eclipse.wst.css.STYLE" />
        		</contentType>
+			<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+          		<partitionType id="org.eclipse.wst.xml.XML_DEFAULT" />
+          		<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
+          		<partitionType id="org.eclipse.jst.jsp.DEFAULT_JSP" />
+          		<partitionType id="org.eclipse.jst.jsp.JSP_DIRECTIVE" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.DELIMITER" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
+          		<partitionType id="org.eclipse.wst.css.STYLE" />
+       		</contentType>
     </proposalComputer>
     <proposalComputer
           activate="false"
@@ -1322,6 +1373,13 @@
 				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
 				<partitionType id="org.eclipse.wst.css.STYLE" />
 			</contentType>
+			<contentType id="jsf.facelet.composite">
+				<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
+				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL" />
+				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
+				<partitionType id="org.eclipse.wst.css.STYLE" />
+			</contentType>
+			
     </proposalComputer>
 
     <proposalCategory
@@ -1400,6 +1458,16 @@
           		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
           		<partitionType id="org.eclipse.wst.css.STYLE" />
        		</contentType>
+       		<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+          		<partitionType id="org.eclipse.wst.xml.XML_DEFAULT" />
+          		<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
+          		<partitionType id="org.eclipse.jst.jsp.DEFAULT_JSP" />
+          		<partitionType id="org.eclipse.jst.jsp.JSP_DIRECTIVE" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.DELIMITER" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL" />
+          		<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
+          		<partitionType id="org.eclipse.wst.css.STYLE" />
+       		</contentType>
     </proposalComputer>
     <proposalComputer
           activate="false"
@@ -1413,6 +1481,12 @@
 				<partitionType id="org.eclipse.wst.css.STYLE" />
        		</contentType>
        		<contentType id="jsf.facelet">
+				<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
+				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL" />
+				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
+				<partitionType id="org.eclipse.wst.css.STYLE" />
+			</contentType>
+			<contentType id="jsf.facelet.composite">
 				<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
 				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL" />
 				<partitionType id="org.eclipse.jst.jsp.SCRIPT.JSP_EL2" />
