--- a/jst/plugins/org.jboss.tools.jst.text.ext/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.text.ext/plugin.xml
@@ -23,26 +23,29 @@
          	<contentType id="jsf.facelet.composite">
          		<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+				<partitionType id="org.eclipse.jst.jsp.JSP_DIRECTIVE" />
+         		<partitionType id="org.eclipse.wst.html.HTML_DEFAULT" />
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner 
          	id="org.jboss.tools.common.text.ext.hyperlink.CSSClassHyperlinkPartitioner"
          	class="org.jboss.tools.jst.text.ext.hyperlink.CSSClassHyperlinkPartitioner">
          	<contentType id="org.eclipse.jst.jsp.core.jspsource">
-         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
-         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE" />
          	</contentType>
          	<contentType id="org.eclipse.wst.html.core.htmlsource">
-         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
-         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE" />
          	</contentType>
          	<contentType id="jsf.facelet">
-         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
-         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE" />
          	</contentType>
          	<contentType id="jsf.facelet.composite">
-         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
-         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE" />
+         	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE" />
          	</contentType>
 		</hyperlinkPartitioner>
 
@@ -80,6 +83,13 @@
          			<axis path="*/jsp:directive.taglib/prefix" />
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_ROOT"/>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:directive.taglib/uri" />
+         			<axis path="*/jsp:directive.taglib/prefix" />
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner 
@@ -90,12 +100,23 @@
          			<axis path="*/jsp:attribute/name/"/>
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:attribute/name/"/>
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner 
 			class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPTextHyperlinkPartitioner" 
 			id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPTextHyperlinkPartitioner">
          	<contentType id="org.eclipse.jst.jsp.core.jspsource">
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_ROOT">
+         			<axis path="*/title/" ignoreCase="true"/>
+         			<axis path="*/h1/" ignoreCase="true"/>
+         		</partitionType>
+         	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
          		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_ROOT">
          			<axis path="*/title/" ignoreCase="true"/>
          			<axis path="*/h1/" ignoreCase="true"/>
@@ -118,6 +139,9 @@
          	<contentType id="jsf.facelet.composite">
          		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_ROOT" />
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_ROOT" />
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner
@@ -133,6 +157,9 @@
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT"/>
          	</contentType>
          	<contentType id="jsf.facelet.composite">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT"/>
+         	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT"/>
          	</contentType>
 		</hyperlinkPartitioner>
@@ -152,6 +179,9 @@
          	<contentType id="jsf.facelet.composite">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT" />
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT" />
+         	</contentType>
 		</hyperlinkPartitioner> 
 
 		<hyperlinkPartitioner
@@ -169,6 +199,9 @@
          	<contentType id="jsf.facelet.composite">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE"/>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE"/>
+         	</contentType>
 		</hyperlinkPartitioner> 
 
 		<hyperlinkPartitioner
@@ -179,12 +212,22 @@
          			<axis path="*/jsp:getProperty/property/" />
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:getProperty/property/" />
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner> 
 
 		<hyperlinkPartitioner
 			class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPBeanSetPropertyHyperlinkPartitioner" 
          	id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPBeanSetPropertyHyperlinkPartitioner">
          	<contentType id="org.eclipse.jst.jsp.core.jspsource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:setProperty/property/" />
+         		</partitionType>
+         	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
          			<axis path="*/jsp:setProperty/property/" />
          		</partitionType>
@@ -200,12 +243,25 @@
          			<axis path="*/jsp:getProperty/name/" />
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:setProperty/name/" />
+         			<axis path="*/jsp:getProperty/name/" />
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner
          	id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPClassHyperlinkPartitioner"
          	class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPClassHyperlinkPartitioner">
          	<contentType id="org.eclipse.jst.jsp.core.jspsource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/jsp:directive.page/import/" />
+         			<axis path="*/jsp:useBean/class/" />
+         			<axis path="*/jsp:useBean/type/" />
+         		</partitionType>
+         	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
          			<axis path="*/jsp:directive.page/import/" />
          			<axis path="*/jsp:useBean/class/" />
@@ -261,6 +317,17 @@
          			<!--axis path="*/style/" /-->
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/link/*" ignoreCase="true"/>
+         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT">
+         			<axis path="*/link/*" ignoreCase="true"/>
+         		</partitionType>
+         		<partitionType id="com.ibm.sse.STYLE">
+         			<!--axis path="*/style/" /-->
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner>
 
 		<hyperlinkPartitioner
@@ -302,6 +369,24 @@
          			<axis path="*/link/href/" ignoreCase="true"/>
          		</partitionType>
          	</contentType>
+         	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
+         		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
+         			<axis path="*/a/href/" ignoreCase="true"/>
+         			<axis path="*/link/href/" ignoreCase="true"/>
+         			<axis path="*/jsp:directive.include/file/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:directive.include/file/" />
+         			<axis path="*/jsp:directive.page/errorPage/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:directive.page/errorPage/" />
+         			<axis path="*/jsp:include/page/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:include/page/" />
+         			<axis path="*/jsp:forward/page/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:forward/page/" />
+         			<axis path="*/jsp:plugin/iepluginurl/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:plugin/iepluginurl/" />
+         			<axis path="*/jsp:plugin/nspluginurl/" />
+         			<axis path="*/[http://java.sun.com/JSP/Page]:plugin/nspluginurl/" />
+         		</partitionType>
+         	</contentType>
 		</hyperlinkPartitioner>
 		<!-- End of Common HTML and/or JSP hyperlink partitioners -->
 
@@ -325,6 +410,9 @@
 				<partitiontype id="org.jboss.tools.common.text.ext.CSS_CLASS" />
 			</contenttypeidentifier>
    			<contenttypeidentifier id="jsf.facelet.composite">
+				<partitiontype id="org.jboss.tools.common.text.ext.CSS_CLASS" />
+			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
 				<partitiontype id="org.jboss.tools.common.text.ext.CSS_CLASS" />
 			</contenttypeidentifier>
 		</hyperlink>
@@ -362,6 +450,9 @@
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_STYLESHEET_REL_LINK" />
 			</contenttypeidentifier>
 			<contenttypeidentifier id="jsf.facelet.composite">
+				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_STYLESHEET_REL_LINK" />
+			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_STYLESHEET_REL_LINK" />
 			</contenttypeidentifier>
 		</hyperlink>
@@ -436,12 +527,18 @@
 			<contenttypeidentifier id="org.eclipse.jst.jsp.core.jspsource">
 				<partitiontype id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT_NAME" />
 			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
+				<partitiontype id="org.jboss.tools.common.text.ext.xml.XML_ELEMENT_NAME" />
+			</contenttypeidentifier>
 		</hyperlink>
 
 		<hyperlink 
 			class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPTaglibHyperlink" 
 			id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPTaglibHyperlink">
 			<contenttypeidentifier id="org.eclipse.jst.jsp.core.jspsource">
+				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_TAGLIB" />
+			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_TAGLIB" />
 			</contenttypeidentifier>
 		</hyperlink>
@@ -461,12 +558,18 @@
 			<contenttypeidentifier id="jsf.facelet.composite">
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_XMLNS" />
 			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
+				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_XMLNS" />
+			</contenttypeidentifier>
 		</hyperlink>
 
 		<hyperlink 
 			class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPForBeanIdHyperlink" 
 			id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPForBeanIdHyperlink">
 			<contenttypeidentifier id="org.eclipse.jst.jsp.core.jspsource">
+				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_FOR_BEAN_ID" />
+			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_FOR_BEAN_ID" />
 			</contenttypeidentifier>
 		</hyperlink>
@@ -477,12 +580,18 @@
 			<contenttypeidentifier id="org.eclipse.jst.jsp.core.jspsource">
             	<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_BEAN_GET_PROPERTY" />
 			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
+            	<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_BEAN_GET_PROPERTY" />
+			</contenttypeidentifier>
 		</hyperlink>
 
 		<hyperlink 
 			class="org.jboss.tools.jst.text.ext.hyperlink.jsp.JSPBeanSetPropertyHyperlink" 
       		id="org.jboss.tools.common.text.ext.hyperlink.jsp.JSPBeanSetPropertyHyperlink">
 			<contenttypeidentifier id="org.eclipse.jst.jsp.core.jspsource">
+				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_BEAN_SET_PROPERTY" />
+			</contenttypeidentifier>
+			<contenttypeidentifier id="org.jboss.tools.jst.jsp.jspincludesource">
 				<partitiontype id="org.jboss.tools.common.text.ext.jsp.JSP_BEAN_SET_PROPERTY" />
 			</contenttypeidentifier>
 		</hyperlink>
