--- a/download.jboss.org/jbosstools/updates/requirements/ecf/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/ecf/build.xml
@@ -5,7 +5,7 @@
 		-os ${target.os} -ws ${target.ws} -arch ${target.arch} -nl ${target.nl} 
 		-consoleLog -nosplash -data /tmp
 		-application org.eclipse.ant.core.antRunner
-		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/tptp/build.xml"
+		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/ecf/build.xml"
 		
 		or, run headless on qa01 server, where Eclipse is installed into ~/eclipse:
 		
@@ -13,17 +13,16 @@
 		${JAVA_HOME}/bin/java -cp ~/eclipse/plugins/org.eclipse.equinox.launcher_*.jar \
 			org.eclipse.equinox.launcher.Main -vm ${JAVA_HOME} -consoleLog -nosplash -data /tmp \
 			-application org.eclipse.ant.core.antRunner \
-			-f ~/RHDS/updates/requirements/tptp/build.xml -Ddestination=/tmp/tptp-repo
+			-f ~/RHDS/updates/requirements/ecf/build.xml -Ddestination=/tmp/ecf-repo
 	-->
 	<target name="mirror">
-		<property name="URL" value="ftp://ftp.osuosl.org/pub/eclipse/tptp/updates/helios/" />
-		<!-- stuck, did not download anything <property name="URL" value="ftp://mirror.csclub.uwaterloo.ca/eclipse/tptp/updates/4.7.2/"/>
-        <property name="URL" value="http://download.eclipse.org/tptp/updates/4.7.2/" /> -->
-		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/tptp/" />
+		<property name="URL" value="http://download.eclipse.org/rt/ecf/3.4/site.p2" />
+		
+		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/ecf/" />
 		<property name="compress" value="true" />
 
 		<p2.mirror>
-			<repository location="file:${destination}/4.7/" name="TPTP plugins for Eclipse 3.6 (EOL)" />
+			<repository location="file:${destination}/3.4/" name="ECF plugins for Eclipse 3.7" />
 			<source>
 				<repository location="${URL}" />
 			</source>
@@ -31,6 +30,6 @@
 			<slicingOptions includeFeatures="true" followStrict="true" />
 		</p2.mirror>
 
-		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/4.7/" artifactRepository="file:${destination}/4.7/" publishartifacts="true" source="${destination}/4.7/" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/3.4/" artifactRepository="file:${destination}/3.4/" publishartifacts="true" source="${destination}/3.4/" compress="${compress}" />
 	</target>
 </project>
