JBDS-1590 Obsolete names of project examples sites
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29546 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
@@ -4,3 +4,4 @@ JBoss_Tools_Community_Examples = JBoss Tools 3.1 Community Examples
 JBoss_Tools_Community_Maven_Examples = JBoss Tools 3.2 Community Maven Examples
 JBoss_Tools_33_Community_Maven_Examples = JBoss Tools 3.3 Community Maven Examples
 JBoss_Tools_Community_BPEL_Examples=JBoss Tools Community BPEL Examples
+JBoss_Tools_32_Community_Examples=JBoss Tools 3.2 Community_Examples
