[JBIDE-8293] added link to SSH2 private keys in preferences
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29603 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -84,6 +84,7 @@ ErrorImageIdNotFound.text = Could not find image with id \"{0}\"
 ErrorMustProvideName.text=A name must be specified
 ErrorMustProvideKeyName.text=A key name must be specified
 ErrorMustProvideImageId.text=An image id must be specified
+ShowSSH2Preferences.label=<a>Show Private Keys in preferences</a>
 
 NewInstance.desc=Specify details for a new instance you wish to launch based on an image
 NewInstance.title=Launch Instance
